cmake_minimum_required(VERSION 2.6)
IF (PROTOC_GEN_JSON_FOUND AND JSON_SPIRIT_FOUND)
	SET(TARGET json_pb)

	SET(SOURCES
		${PROJECT_BINARY_DIR}/libs/json_pb/plugin.pb-json.cc
	)
	SET(HEADERS
		${PROJECT_BINARY_DIR}/libs/json_pb/plugin.pb-json.h
	)

	INCLUDE_DIRECTORIES(${JSON_SPIRIT_INCLUDE_DIR})
	ADD_DEFINITIONS(-DHAVE_JSON_SPIRIT)
	ADD_DEFINITIONS(-DJSON_SPIRIT_STATIC_LINKED)
	SET(JSON_LIB json_spirit)

	INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/libs/protobuf)
	
	SET_SOURCE_FILES_PROPERTIES(${SOURCES} PROPERTIES GENERATED TRUE)

	ADD_DEFINITIONS(${NSCP_GLOBAL_DEFINES})

	ADD_LIBRARY(${TARGET} ${SOURCES})
	target_link_libraries(${TARGET} ${PROTOBUF_LIBRARY} protobuf ${JSON_LIB})
	ADD_DEPENDENCIES(${TARGET} protobuf)

	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER "libraries")

	IF(CMAKE_COMPILER_IS_GNUCXX)
		IF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
			SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_FLAGS -fPIC)
		ENDIF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
	ENDIF(CMAKE_COMPILER_IS_GNUCXX)
ENDIF ()