cmake_minimum_required(VERSION 2.6)

LIST(APPEND cryptopp_SOURCES nscpcrypt.cpp)
IF (WIN32)
	LIST(APPEND cryptopp_SOURCES ${NSCP_INCLUDEDIR}/nscpcrypt/nscpcrypt.hpp)
ENDIF (WIN32)

IF(CRYPTOPP_FOUND)
	ADD_DEFINITIONS(-DHAVE_LIBCRYPTOPP)
	INCLUDE_DIRECTORIES(${CRYPTOPP_INCLUDE_DIR})
ELSE(CRYPTOPP_FOUND)
	MESSAGE(STATUS "   - Crypto++ not found (no ecryption support)")
ENDIF(CRYPTOPP_FOUND)

IF(MSVC)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4100 /wd4244 /wd4127 /wd4512")
ENDIF(MSVC)

ADD_LIBRARY(nscpcrypt STATIC  ${cryptopp_SOURCES})
SET_TARGET_PROPERTIES(nscpcrypt PROPERTIES FOLDER "libraries")

IF(CRYPTOPP_FOUND)
	TARGET_LINK_LIBRARIES(nscpcrypt ${CRYPTOPP_LIBRARIES})
ENDIF(CRYPTOPP_FOUND)

IF (WIN32)
	TARGET_LINK_LIBRARIES (nscpcrypt Ws2_32.lib)
ENDIF (WIN32)

IF(CMAKE_COMPILER_IS_GNUCXX)
	IF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
		SET_TARGET_PROPERTIES(nscpcrypt PROPERTIES COMPILE_FLAGS -fPIC)
	ENDIF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" AND NOT APPLE)
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
